gccida/g3/subst_asm_stack_regs
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2345:8: error: use of undeclared identifier 'v17'
rtx ***v17; // r12 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2346:7: error: use of undeclared identifier 'v18'
rtx **v18; // rdx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2347:7: error: use of undeclared identifier 'v19'
rtx **v19; // r11 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2356:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2356:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2357:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2357:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2363:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2363:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2369:6: error: use of undeclared identifier 'v41'
rtx *v41; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2376:8: error: use of undeclared identifier 'v48'
rtx ***v48; // r14 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2384:6: error: use of undeclared identifier 'v56'
rtx *v56; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2387:6: error: use of undeclared identifier 'v59'
rtx *v59; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2388:7: error: use of undeclared identifier 'v60'
rtx **v60; // rcx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2389:4: error: expected ';' after expression
rtx v61; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2389:5: error: use of undeclared identifier 'v61'
rtx v61; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2398:7: error: use of undeclared identifier 'v70'
rtx **v70; // r14 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2399:4: error: expected ';' after expression
rtx v71; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/reg-stack.c:2399:5: error: use of undeclared identifier 'v71'
rtx v71; // rsi 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/subst_asm_stack_regs/src/obj/reg-stack.o] Error 1
